# ExoVision-AI

./: .gitignore  README.md  scaler1_20251005_195122.pkl
ai-service/: main.py  pyproject.toml  test_api.sh
ai-service/app/api/v1/: exoplanet.py  statistics.py
ai-service/app/core/: config.py  feature_engineering.py  mission_data.py
ai-service/app/domain/: model_loader.py
ai-service/app/schemas/: exoplanet.py
data_preprocessing/: corr  final_dataset.py  k2_cleaned.py  kepler_cleaned.py  tess_cleaned.py  tess_correlation_analysis.py
datasets/: exoplanets_integrated.csv  tess_merged.csv
docs/: EXOPLANET_PIPELINE_README.md  ai.md  프로젝트_종합_발표자료.md
model/: load_and_predict.py  model2_candidate_voting_20251005_195122.pkl
model_code/: final_model.py
models/: config_20251005_195122.pkl  load_and_predict.py  model1_binary_catboost_20251005_195122.pkl  scaler2_20251005_195122.pkl
trial/: 3d_exo.py  PREDICTION_GUIDE.md  QUICK_START.md  asd.py  check_top5_minmax.py  column_importance_evaluation.md  column_mapping.csv  column_mapping_analysis.py  correlation_analysis.py  data.txt  dataset_integration_guide.md  direct_3class_system.py  eda.ipynb  ensemble.py  error_columns_analysis.py  error_columns_demo.py  error_columns_integration_guide.md  example_prediction.py  exoplanet_classification_pipeline.py  fast_hybrid_model.py  feature_importance_analysis.py  feature_importance_ranking.csv  feature_table.py  final_dataset.py  final_optimized_results.txt  gh.py  hierarchical_astronomical_method.py  hierarchical_model_methodB.py  improve_kepler_k2_model.py  k2_cleaned.py  (+26 more)
(+38 files in other folders)
